# v4d_core

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  README.md  V4D_Mod.cpp  V4D_Mod.h  Vulkan4D.h  common.hh  common.linux.hh  common.windows.hh  common_core.hh  common_core.windows.hh  common_linux.hh  common_windows.hh  global_build_config.cmake  helpers.hh  imgui_v4d_config.hh  modules.hh  project.hh  systems.hh  tests.cxx  utilities.hh  v4d.cpp  v4d.h  v4dconfig.hh  v4dconfig_base.hh
common/: common.hh  common.linux.hh  common.windows.hh  common_core.hh  common_core.linux.hh  includes.hh  pch.hh
helpers/: Base16.cxx  Base16.hpp  Base64.cxx  Base64.hpp  BaseN.cxx  BaseN.hpp  ByteStream.cxx  ByteStream.hpp  COMMON_OBJECT.cxx  COMMON_OBJECT.hpp  DataStream.cxx  DataStream.hpp  EntityComponentSystem.cxx  EntityComponentSystem.hpp  Error.hpp  FPSCounter.hpp  Logger.hpp  ReadOnlyStream.hpp  SHARED_OBJECT.hpp  STATIC_OBJECT.hpp  STREAMABLE.hpp  SharedLibraryLoader.hpp  Socket.cxx  Socket.hpp  Stream.hpp  String.hpp  SystemsLoader.hpp  TextID.hpp  Timer.hpp  TrippleBuffer.hpp  commonObject.hpp  error.hpp  event.cxx  event.hpp  macros.hpp  modular.hpp  noise.hpp  stacktrace.hpp  types.hpp
modules/: Audio.h  V4D_Client.cpp  V4D_Client.h  V4D_Game.cpp  V4D_Game.h  V4D_Input.cpp  V4D_Input.h  V4D_Input0.hpp  V4D_Objects.cpp  V4D_Objects.h  V4D_Physics.cpp  V4D_Physics.h  V4D_Renderer.cpp  V4D_Renderer.h  V4D_Rendering0.hpp  V4D_Server.cpp  V4D_Server.h
modules/io/: Logger.cpp  Logger.h  SharedLibraryLoader.h  Socket.h  SystemsLoader.cpp  SystemsLoader.h
modules/networking/: ListeningServer.h
modules/processing/: ThreadPool.cpp  ThreadPool.cxx  ThreadPool.h
submodules/: Input.hpp  Rendering.hpp  V4DRendering.hpp
utilities/audio/: AudioSource.cpp  AudioSource.h
utilities/crypto/: AES.cpp  AES.cxx  AES.h  Crypto.cpp  Crypto.h  RSA.cpp  RSA.cxx  RSA.h  Random.cpp  Random.h  SHA.cpp  SHA.cxx  SHA.h
utilities/data/: DataStream.cxx  DataStream.hpp  EntityComponentSystem.cxx  EntityComponentSystem.hpp  ReadOnlyStream.cpp  ReadOnlyStream.h  ReadOnlyStream.hpp  Stream.cpp  Stream.h  WriteOnlyStream.cpp  WriteOnlyStream.h  WriteOnlyStream.hpp
utilities/graphics/: FrameBufferedObject.hpp  FramebufferedObject.hpp  Mesh.hpp  MeshFile.cpp  MeshFile.h  ModularRenderer.cpp  ModularRenderer.h  RenderableGeometryEntity.cpp  RenderableGeometryEntity.h  Renderer.cpp  Renderer.h  TextureObject.cpp  TextureObject.h  VulkanInstance.cxx  Window.cpp  Window.h  imgui_vulkan.cpp  imgui_vulkan.h
utilities/graphics/generic/: Camera.hpp  Geometry.cpp  Geometry.h  LightSource.hpp  ObjectInstance.hpp  Scene.cpp  Scene.h  Scene.hpp  geometry_attributes.hh
utilities/graphics/shaders/: Camera.glsl  GBuffers.glsl  core.glsl  core_buffers.glsl  core_lightingPass.glsl  cpp_glsl_foot.hh  cpp_glsl_head.hh  cpp_glsl_head_glsl.hh  gBuffers_in.glsl  gBuffers_out.glsl  noise.glsl  rtx_base.glsl  rtx_fragment.glsl  rtx_pbr.glsl  wireframe.geom
utilities/graphics/vulkan/: Buffer.cpp  Buffer.h  BufferObject.cpp  BufferObject.h  CommonObjects.cpp  CommonObjects.h  ComputeShaderPipeline.cpp  ComputeShaderPipeline.h  ComputeShaderPipelineObject.cpp  ComputeShaderPipelineObject.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetObject.cpp  DescriptorSetObject.h  Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageObject.cpp  ImageObject.h  Instance.cpp  Instance.h  Loader.cpp  Loader.h  MemoryPool.cpp  MemoryPool.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineLayout.cpp  PipelineLayout.h  PipelineLayoutObject.cpp  PipelineLayoutObject.h  Queue.hpp  RasterShaderPipeline.cpp  RasterShaderPipeline.h  RasterShaderPipelineObject.cpp  RasterShaderPipelineObject.h  RenderPass.cpp  (+16 more)
utilities/graphics/vulkan/raytracing/: AccelerationStructure.cpp  (+5 more)
utilities/io/: ASCIIFile.cpp  ASCIIFile.h  BinaryFileStream.cpp  BinaryFileStream.cxx  BinaryFileStream.h  ConfigFile.cpp  ConfigFile.h  FilePath.cpp  FilePath.h  Logger.cpp  Logger.h  ModulesLoader.cpp  ModulesLoader.h  P2pSocket.cpp  P2pSocket.h  SharedLibraryLoader.cpp  SharedLibraryLoader.h  Socket.cpp  Socket.cxx  Socket.h  StringListFile.cpp  StringListFile.h  TextFile.cpp  TextFile.h
utilities/modules/: ModulesLoader.cpp  ModulesLoader.h
utilities/networking/: ClientPool.cpp  ClientPool.h  IncomingClient.cpp  IncomingClient.h  IncomingConnection.h  ListeningServer.cpp  ListeningServer.h  OutgoingConnection.cpp  OutgoingConnection.h  ZAP.hh  networking.cxx
utilities/processing/: ThreadPool.cpp  ThreadPool.cxx  ThreadPool.h
utilities/scene/: Camera.hpp  Geometry.cpp  Geometry.h  GltfModelLoader.cpp  GltfModelLoader.h  LightSource.hpp  ModelLoader.hpp  NetworkGameObject.cpp  NetworkGameObject.h  NetworkGameObject.hpp  ObjModelLoader.cpp  ObjModelLoader.h  ObjectInstance.hpp  PhysicsInfo.cpp  PhysicsInfo.h  PhysicsInfo.hpp  Scene.cpp  Scene.h  geometry_attributes.hh
(+4 files in other folders)
